# linkifier

./: Cargo.toml  README.md  update.sh
migrations/2025-10-24-221302-0000_links/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
static/: homepage.html  script.js  styles.css
templates/: 404.html  index.html
