[package]
name = "linkifier"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
askama = "0.14.0"
axum = { version = "0.8.6", features = ["macros"] }
chrono = "0.4.42"
diesel = { version = "2.3.3", features = ["chrono", "postgres"] }
dotenvy = "0.15.7"
rand = { version = "0.9.2", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tower = { version = "0.5.2", features = ["tokio", "util"] }
tower-http = { version = "0.6.6", features = ["fs", "tokio", "trace"] }
